tests/NormalTests/paczka1/fuzzy1/49777986.err
Error in line 2: R8F A224 64,7
Error in line 1: 0Iy1iz30Hsf A174 62,0
Error in line 11: 0Iy1iz30Hsf A230 26,3
Error in line 15: A23' A174 28,7
Error in line 17: R8F A230 88,7
